set up lib with 1.4.0 perfect-scrollbar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
       "dom"
     ],
     "paths": {
-      "ngx-perfect-scrollbar": [
+      "al-ngx-perfect-scrollbar": [
         "dist/lib"
       ]
     }
