--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "ngx-perfect-scrollbar",
-  "description": "Angular wrapper library for Perfect Scrollbar",
-  "bugs": "https://github.com/zefoy/ngx-perfect-scrollbar/issues",
-  "version": "9.0.0",
+  "name": "al-ngx-perfect-scrollbar",
+  "description": "Fork of ngx-perfect-scrollbar",
+  "version": "9.2.0",
   "license": "MIT",
-  "private": true,
   "scripts": {
     "ng": "ng",
     "lint": "ng lint",
@@ -23,20 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zefoy/ngx-perfect-scrollbar.git"
-  },
-  "config": {
-    "deployToGit": {
-      "repository": "git@github.com:zefoy/ngx-perfect-scrollbar.git",
-      "branch": "gh-pages",
-      "folder": "dist/app",
-      "script": "ng build app --prod -- --base-href=ngx-perfect-scrollbar --delete-output-path=false",
-      "commit": "Publishing $npm_package_version",
-      "user": {
-        "name": "ZEF Devel",
-        "email": "devel@zef.fi"
-      }
-    }
+    "url": "https://github.com/alamgirqazi/ngx-perfect-scrollbar.git"
   },
   "dependencies": {
     "@angular/cdk": "^9.0.0-rc.6",
@@ -47,7 +32,7 @@
     "@angular/platform-browser": "^9.0.0-rc.7",
     "@angular/platform-browser-dynamic": "^9.0.0-rc.7",
     "core-js": "^3.6.0",
-    "perfect-scrollbar": "^1.4.0",
+    "perfect-scrollbar": "1.4.0",
     "resize-observer-polyfill": "^1.5.0",
     "rxjs": "^6.5.0",
     "zone.js": "^0.10.0"
