--- a/projects/lib/package.json
+++ b/projects/lib/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "ngx-perfect-scrollbar",
+  "name": "al-ngx-perfect-scrollbar",
   "description": "Angular wrapper library for Perfect Scrollbar",
-  "bugs": "https://github.com/zefoy/ngx-perfect-scrollbar/issues",
-  "version": "9.0.0-2",
+  "version": "9.2.0",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zefoy/ngx-perfect-scrollbar.git"
+    "url": "https://github.com/alamgirqazi/ngx-perfect-scrollbar.git"
   },
   "dependencies": {
-    "perfect-scrollbar": "^1.4.0"
+    "perfect-scrollbar": "1.4.0"
   },
   "peerDependencies": {
     "@angular/common": "^9.0.0",
